# adv_robotics_project

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  cpp_run.py  cpp_run_multithread.py  image_generation.py  import_transforms.py  pcd_to_pc.py  pcd_to_ply.py  rename.py  usd_converter.py
csv_distances/: 3M_961401-9040704-AR.csv  3M_961402-9040704-AR.csv  3M_961402-9041304-AR.csv  3M_961402-9041604-AR.csv  3M_961403-9040304-AR.csv  3M_961403-9040804-AR.csv  3M_961403-9041404-AR.csv  3M_961403-9041704-AR.csv  3M_961404-9040604-AR.csv  3M_961404-9041704-AR.csv  3M_961405-9040604-AR.csv  3M_961405-9041204-AR.csv  3M_961405-9041504-AR.csv  3M_961405-9041804-AR.csv  3M_961406-9040704-AR.csv  3M_961406-9041304-AR.csv  3M_961406-9041604-AR.csv  3M_961407-9040304-AR.csv  3M_961407-9040804-AR.csv  3M_961407-9041404-AR.csv  3M_961407-9041704-AR.csv  3M_961408-9040604-AR.csv  3M_961408-9041204-AR.csv  3M_961408-9041304-AR.csv  3M_961408-9041504-AR.csv  3M_961408-9041804-AR.csv  3M_961409-9040704-AR.csv  3M_961409-9041304-AR.csv  3M_961409-9041604-AR.csv  3M_961410-9040304-AR.csv  3M_961410-9040804-AR.csv  3M_961410-9041404-AR.csv  3M_961410-9041804-AR.csv  3M_961411-9040704-AR.csv  3M_961411-9041304-AR.csv  3M_961411-9041604-AR.csv  3M_961412-9040304-AR.csv  3M_961412-9040804-AR.csv  3M_961412-9041404-AR.csv  3M_961412-9041704-AR.csv  (+825 more)
data/: kiwi_par.txt
hull_colored_ds/: 3M_961401-9040704-AR.ply  3M_961402-9040704-AR.ply  3M_961402-9041304-AR.ply  3M_961402-9041604-AR.ply  3M_961403-9040304-AR.ply  3M_961403-9040804-AR.ply  3M_961403-9041404-AR.ply  3M_961403-9041704-AR.ply  3M_961404-9040604-AR.ply  3M_961404-9041704-AR.ply  3M_961405-9040604-AR.ply  3M_961405-9041204-AR.ply  3M_961405-9041504-AR.ply  3M_961405-9041804-AR.ply  3M_961406-9040704-AR.ply  3M_961406-9041304-AR.ply  3M_961406-9041604-AR.ply  3M_961407-9040304-AR.ply  3M_961407-9040804-AR.ply  3M_961407-9041404-AR.ply  3M_961407-9041704-AR.ply  3M_961408-9040604-AR.ply  3M_961408-9041204-AR.ply  3M_961408-9041304-AR.ply  3M_961408-9041504-AR.ply  3M_961408-9041804-AR.ply  3M_961409-9040704-AR.ply  3M_961409-9041304-AR.ply  3M_961409-9041604-AR.ply  3M_961410-9040304-AR.ply  3M_961410-9040804-AR.ply  3M_961410-9041404-AR.ply  3M_961410-9041804-AR.ply  3M_961411-9040704-AR.ply  3M_961411-9041304-AR.ply  3M_961411-9041604-AR.ply  3M_961412-9040304-AR.ply  3M_961412-9040804-AR.ply  3M_961412-9041404-AR.ply  3M_961412-9041704-AR.ply  (+825 more)
pcd/: 3M_961401-9040704-AR.pcd  3M_961402-9040704-AR.pcd  3M_961402-9041304-AR.pcd  3M_961402-9041604-AR.pcd  3M_961403-9040304-AR.pcd  3M_961403-9040804-AR.pcd  3M_961403-9041404-AR.pcd  3M_961403-9041704-AR.pcd  3M_961404-9040604-AR.pcd  3M_961404-9041704-AR.pcd  3M_961405-9040604-AR.pcd  3M_961405-9041204-AR.pcd  3M_961405-9041504-AR.pcd  3M_961405-9041804-AR.pcd  3M_961406-9040704-AR.pcd  3M_961406-9041304-AR.pcd  3M_961406-9041604-AR.pcd  3M_961407-9040304-AR.pcd  3M_961407-9040804-AR.pcd  (+868 more)
(+2201 files in other folders)
