cmake_minimum_required(VERSION 3.15)
project(visualHull)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIRS})
add_executable(visualHull ../src/main.cpp)
target_link_libraries(visualHull ${OpenCV_LIBS})
