cmake_minimum_required(VERSION 3.15)
project(visualHull)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
set(CMAKE_FIND_DEBUG_MODE TRUE)
find_package(Eigen3 REQUIRED)
set(CMAKE_FIND_DEBUG_MODE FALSE)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIRS})
include_directories(/usr/local/include/eigen3)
message(STATUS ${EIGEN3_INCLUDE_DIRS})
message(STATUS ${OpenCV_INCLUDE_DIRS})

add_executable(visualHull ../src/main.cpp)
target_link_libraries(visualHull ${OpenCV_LIBS})
